# ygopro-core

./: CMakeLists.txt  conanfile.txt
include/: interpreter.h
